# groundcheck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
docs/: dashboard.html
evals/: RESULTS.md  run_evals.py
evals/scenarios/: hallucination_cases.jsonl  tool_selection.jsonl
examples/: claude_code.md  claude_desktop.json  sample_dataset.jsonl
src/groundcheck/: __init__.py  dashboard.py  http.py  metrics.py  schemas.py  server.py
src/groundcheck/engine/: claims.py  compare.py  retrieval.py  suite.py
src/groundcheck/judge/: parsing.py  prompts.py  sampler.py
tests/: fakes.py  test_claims_engine.py  test_compare_engine.py  test_dashboard.py  test_metrics.py  test_retrieval_engine.py  test_sampler.py  test_suite_engine.py
