[project]
name = "groundcheck"
version = "0.1.0"
description = "MCP server for RAG evaluation: faithfulness scoring, hallucination detection, and retrieval quality metrics. Zero API keys via MCP sampling."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.11"
keywords = ["mcp", "rag", "evaluation", "hallucination-detection", "llm-eval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp[cli]>=1.28.1",
    "pydantic>=2",
    "httpx>=0.28",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/offquestxo/groundcheck"
Repository = "https://github.com/offquestxo/groundcheck"
Issues = "https://github.com/offquestxo/groundcheck/issues"

[project.scripts]
groundcheck = "groundcheck.server:main"
groundcheck-http = "groundcheck.http:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
